# awake-mouse-app

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  engine.rs  main.rs  worker.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
